--- a/Cargo.toml
+++ b/Cargo.toml
@@ -319,6 +319,7 @@ diesel = { version = "2.1.0", features = [
 diesel-derive-enum = { version = "2.0.1" }
 diesel_migrations = { version = "2.0.0" }
 dirs = "4.0.0"
+domain = "0.10.0"
 duration-str = "0.5.0"
 ed25519 = { version = "1.5.0", features = ["pkcs8", "alloc", "zeroize"] }
 ed25519-consensus = { version = "2.0.1", features = ["serde"] }
