--- a/crates/sui-types/Cargo.toml
+++ b/crates/sui-types/Cargo.toml
@@ -14,6 +14,7 @@ bcs.workspace = true
 byteorder.workspace = true
 chrono.workspace = true
 consensus-config.workspace = true
+domain.workspace = true
 num_enum.workspace = true
 im.workspace = true
 itertools.workspace = true
